--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ yalc.lock
 
 backend/out
 
+# Ignore bundled Bitwarden CLI binary (fetched at build time)
+backend/bin/bw
+
 # Make sure to ignore any instance of the loader's decky_plugin.py
 decky_plugin.py
 
